test/fail/classes/class_nesting.lly
#[
SyntaxError: Cannot define a class here.
    from class_nesting.lly:7:
]#

class c1(a: Integer) {
    class c2(b: Integer) {

    }
}
